--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.24.0",
     "bulma": "^0.9.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-googlemaps": "^0.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
