--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bulma": "^0.9.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-googlemaps": "^0.1.2"
+    "vue-browser-geolocation": "^1.8.0",
+    "vue-googlemaps": "^0.1.2",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -21,7 +23,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vue2-google-maps": "^0.10.7"
   },
   "eslintConfig": {
     "root": true,
